panko-compiletest/src/snapshots/panko_compiletest__preprocess-panko__tests__cases__execute__preprocessor__test_macro_expansion_is_not_recursive.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=preprocess"
    - "--stop-after=preprocess"
    - panko/tests/cases/execute/preprocessor/test_macro_expansion_is_not_recursive.c
---
success: true
exit_code: 0
----- stdout -----


int printf(char const*, ...);

int main() {
    int a = 10;
    int b = 20;
    int c = 30;





    return a + 5 + 3 + 1 ;
}

----- stderr -----
