panko-compiletest/src/snapshots/panko_compiletest__preprocess-panko__tests__cases__execute__preprocessor__test_multiline_macro_due_to_block_comment.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=preprocess"
    - "--stop-after=preprocess"
    - panko/tests/cases/execute/preprocessor/test_multiline_macro_due_to_block_comment.c
---
success: true
exit_code: 0
----- stdout -----




int main () {
    return 42;
}

----- stderr -----
